--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,290 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+html {
+  scroll-behavior: smooth;
+  font-size: 62.5%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: black;
+  overflow-x: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Header {
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 4rem;
+}
+
+.Hero {
+  background-image: url(./Images/bg-img.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
+  border-bottom: 7px solid #2d2c2c;
+}
+
+.Header-btn {
+  background-color: red;
+  color: white;
+  padding: 0.7rem 1.5rem;
+  font-size: 1.8rem;
+  letter-spacing: 0.2px;
+  font-weight: 500;
+  border-radius: 5px;
+}
+
+.Hero--text,
+.Input--container {
+  color: white;
+  display: grid;
+  place-items: center;
+}
+
+.Input--container {
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-top: 2rem;
+  align-items: center;
+}
+
+.Hero--text {
+  margin-top: 10rem;
+}
+
+.Hero--text-h1,
+.MiddleHeader {
+  font-weight: 500;
+  font-size: 5rem;
+}
+
+.Hero--text-h3,
+.MiddleHeader-h3 {
+  margin-top: 2rem;
+  font-size: 2.4rem;
+  font-weight: 200;
+}
+
+.Input--h5 {
+  margin-top: 3rem;
+  font-size: 2rem;
+  font-weight: 200;
+}
+
+.Input {
+  width: 530px;
+  height: 60px;
+  border: none;
+  text-indent: 1rem;
+}
+
+.Input--btn {
+  height: 60px;
+  width: 170px;
+  background-color: red;
+  color: white;
+  border: none;
+  font-size: 2.5rem;
+  letter-spacing: 0.2px;
+  font-weight: 500;
+}
+
+.Input--btn:hover {
+  opacity: 90%;
+}
+
+.Input:focus {
+  outline: none;
+}
+
+.Input::placeholder {
+  color: #2a2929;
+  font-size: 1.5rem;
+  letter-spacing: 0.2px;
+  font-weight: 500;
+}
+
+.forward-icon {
+  height: 20px;
+  width: 15px;
+  align-self: center;
+}
+
+.Main {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.First,
+.Second {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  padding: 2rem 0;
+  border-bottom: 7px solid #2d2c2c;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.First--img {
+  width: 80%;
+}
+
+.First--text-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 10rem;
+}
+
+.Second--text-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-right: 10rem;
+}
+
+.First--img-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.First-h1,
+.Second-h1 {
+  font-weight: 500;
+  font-size: 5rem;
+  margin-bottom: 1.5rem;
+}
+
+.First-h5,
+.Second-h5 {
+  font-weight: 500;
+  font-size: 2.7rem;
+  letter-spacing: 0.4px;
+  font-weight: 300;
+}
+
+.MiddleText {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  border-bottom: 7px solid #2d2c2c;
+  padding: 7rem 0 7rem 10rem;
+}
+.Accordian--container {
+  margin-top: 5rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.Accordian {
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
+  padding: 4rem 10rem;
+  width: 75%;
+}
+
+.Top {
+  font-size: 2.5rem;
+  background-color: #2d2c2c;
+  border-bottom: 1px black solid;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 4rem;
+  cursor: pointer;
+  font-weight: 400;
+}
+
+.Answer {
+  background-color: #2d2c2c;
+  font-size: 2rem;
+  padding: 2rem 4rem;
+  display: none;
+  transition: all 300ms ease-in-out;
+}
+
+.Answer.show {
+  transition: all 300ms ease-in-out;
+  display: block;
+}
+
+.Fake-icon {
+  font-size: 3rem;
+}
+
+.Accordian-h1 {
+  font-weight: 500;
+  font-size: 5rem;
+  margin-bottom: 1.5rem;
+  color: white;
+}
+
+.Mustfix {
+  color: white;
+  font-size: 2rem;
+  letter-spacing: 0.4px;
+  font-weight: 300;
+  text-align: center;
+  margin-top: 3rem;
+}
+
+.Footer {
+  color: #676565;
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+  align-items: flex-start;
+  justify-content: center;
+  margin: 5rem 0;
+}
+
+.Footer-grid {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 10rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.Footer--grid-items {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.Footer--middle-links,
+.Footer--first-link,
+.Footer--last-link {
+  font-size: 1.3rem;
+  letter-spacing: 0.5px;
+  font-weight: 200;
+}
+
+.Footer--first-link:hover {
+  text-decoration: underline;
+}
+.Footer--middle-links:hover {
+  text-decoration: underline;
+}
+.Footer--last-link:hover {
+  text-decoration: underline;
+}
+
+.Center {
+  display: grid;
+  place-items: center;
+  border-top: 7px solid #2d2c2c;
+  margin-top: 7rem;
+  padding-left: 15rem;
 }
