--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ body {
   overflow-x: hidden;
 }
 
+.App {
+  margin: 0 auto 0 auto;
+  max-width: 1440px;
+}
+
 .Header {
   display: flex;
   align-items: center;
