--- a/src/Querries.css
+++ b/src/Querries.css
@@ -308,6 +308,10 @@
 }
 
 @media (max-width: 450px) {
+  .First-h1,
+  .Second-h1 {
+    padding: 0 2rem;
+  }
   .Input {
     width: 350px;
     height: 43px;
