--- a/src/App.css
+++ b/src/App.css
@@ -100,7 +100,7 @@ body {
   font-size: 2.5rem;
   letter-spacing: 0.2px;
   font-weight: 500;
-  outline: none;
+  border: none;
 }
 
 .Input--btn:hover {
