--- a/src/Querries.css
+++ b/src/Querries.css
@@ -310,7 +310,7 @@
 @media (max-width: 450px) {
   .First-h1,
   .Second-h1 {
-    padding: 0 2rem;
+    padding: 0;
   }
   .Input {
     width: 350px;
